src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void* FileStorage_getFirstTopLevelNode_0(void* self);
extern "C" __declspec(dllexport) void* FileStorage_root_0(void* self, int streamidx);
extern "C" __declspec(dllexport) void* FileStorage_operator_get_0(void* self, const char* nodename);
extern "C" __declspec(dllexport) void FileStorage_write_0(void* self, const char* name, int val);
extern "C" __declspec(dllexport) void FileStorage_write_1(void* self, const char* name, bool val);
extern "C" __declspec(dllexport) void FileStorage_write_2(void* self, const char* name, int64_t val);
extern "C" __declspec(dllexport) void FileStorage_write_3(void* self, const char* name, double val);
extern "C" __declspec(dllexport) void FileStorage_write_4(void* self, const char* name, const char* val);
extern "C" __declspec(dllexport) void FileStorage_write_5(void* self, const char* name, void* val);
extern "C" __declspec(dllexport) void FileStorage_write_6(void* self, const char* name, void* val);
extern "C" __declspec(dllexport) void FileStorage_writeComment_0(void* self, const char* comment, bool append);
extern "C" __declspec(dllexport) void FileStorage_startWriteStruct_0(void* self, const char* name, int flags, const char* typeName);
extern "C" __declspec(dllexport) void FileStorage_endWriteStruct_0(void* self);
extern "C" __declspec(dllexport) int FileStorage_getFormat_0(void* self);
extern "C" __declspec(dllexport) void KeyPoint_Delete(void* self);
extern "C" __declspec(dllexport) void* KeyPoint_New_0();
extern "C" __declspec(dllexport) void* KeyPoint_New_1(float x, float y, float size, float angle, float response, int octave, int class_id);
extern "C" __declspec(dllexport) void KeyPoint_convert_0(void* keypoints, void* points2f, void* keypointIndexes);
extern "C" __declspec(dllexport) void KeyPoint_convert_1(void* points2f, void* keypoints, float size, float response, int octave, int class_id);
extern "C" __declspec(dllexport) float KeyPoint_overlap_0(void* kp1, void* kp2);
extern "C" __declspec(dllexport) cv::Point2f KeyPoint_pt_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_pt_set(void* self, cv::Point2f val);
extern "C" __declspec(dllexport) float KeyPoint_size_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_size_set(void* self, float val);
extern "C" __declspec(dllexport) float KeyPoint_angle_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_angle_set(void* self, float val);
extern "C" __declspec(dllexport) float KeyPoint_response_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_response_set(void* self, float val);
extern "C" __declspec(dllexport) int KeyPoint_octave_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_octave_set(void* self, int val);
extern "C" __declspec(dllexport) int KeyPoint_class_id_get(void* self);
extern "C" __declspec(dllexport) void KeyPoint_class_id_set(void* self, int val);
extern "C" __declspec(dllexport) void Mat_Delete(void* self);
extern "C" __declspec(dllexport) void* Mat_New_0();
extern "C" __declspec(dllexport) void* Mat_New_1(int rows, int cols, int type);
extern "C" __declspec(dllexport) void* Mat_New_2(int rows, int cols, int type, void* data, size_t step);
extern "C" __declspec(dllexport) void* Mat_New_3(void* m, cv::Range rowRange, cv::Range colRange);
extern "C" __declspec(dllexport) void* Mat_New_4(void* m, cv::Rect roi);
extern "C" __declspec(dllexport) void Mat_create_0(void* self, int rows, int cols, int type);
extern "C" __declspec(dllexport) void Mat_release_0(void* self);
extern "C" __declspec(dllexport) void* Mat_clone_0(void* self);
extern "C" __declspec(dllexport) void Mat_copyTo_0(void* self, void* dst);
extern "C" __declspec(dllexport) void Mat_convertTo_0(void* self, void* dst, int rtype, double alpha, double beta);
extern "C" __declspec(dllexport) int Mat_type_0(void* self);
extern "C" __declspec(dllexport) int Mat_depth_0(void* self);
extern "C" __declspec(dllexport) int Mat_channels_0(void* self);
extern "C" __declspec(dllexport) size_t Mat_elemSize_0(void* self);
extern "C" __declspec(dllexport) bool Mat_empty_0(void* self);
extern "C" __declspec(dllexport) size_t Mat_total_0(void* self);
extern "C" __declspec(dllexport) bool Mat_isContinuous_0(void* self);
extern "C" __declspec(dllexport) bool Mat_isSubmatrix_0(void* self);
extern "C" __declspec(dllexport) int Mat_rows_get(void* self);
extern "C" __declspec(dllexport) int Mat_cols_get(void* self);
extern "C" __declspec(dllexport) void* Mat_data_get(void* self);
extern "C" __declspec(dllexport) size_t Mat_step_get(void* self);
extern "C" __declspec(dllexport) void MatShape_Delete(void* self);
extern "C" __declspec(dllexport) bool MatShape_empty_0(void* self);
extern "C" __declspec(dllexport) bool MatShape_isScalar_0(void* self);
extern "C" __declspec(dllexport) void MatShape_clear_0(void* self);
extern "C" __declspec(dllexport) void MatShape_erase_0(void* self, void* where);
extern "C" __declspec(dllexport) int MatShape_channels_0(void* self);
extern "C" __declspec(dllexport) bool MatShape_hasSymbols_0(void* self);
extern "C" __declspec(dllexport) void* MatShape_expand_0(void* self, void* another);
extern "C" __declspec(dllexport) void* MatShape_toLayout_0(void* self, int newLayout, int C0);
extern "C" __declspec(dllexport) void Moments_Delete(void* self);