src/OpenCV5Sharp/Generated/NativeMethods.Core.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FileStorage_getFirstTopLevelNode_0(FileStorageHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FileStorage_root_0(FileStorageHandle self, int streamidx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FileStorage_operator_get_0(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? nodename);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_0(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_1(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_2(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, long val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_3(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_4(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_5(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_write_6(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_writeComment_0(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? comment, [MarshalAs(UnmanagedType.U1)] bool append);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_startWriteStruct_0(FileStorageHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, int flags, [MarshalAs(UnmanagedType.LPUTF8Str)] string? typeName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FileStorage_endWriteStruct_0(FileStorageHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FileStorage_getFormat_0(FileStorageHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KeyPoint_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KeyPoint_New_1(float x, float y, float size, float angle, float response, int octave, int class_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_convert_0(IntPtr keypoints, IntPtr points2f, IntPtr keypointIndexes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_convert_1(IntPtr points2f, IntPtr keypoints, float size, float response, int octave, int class_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float KeyPoint_overlap_0(KeyPointHandle kp1, KeyPointHandle kp2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point2F KeyPoint_pt_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_pt_set(KeyPointHandle self, Point2F val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float KeyPoint_size_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_size_set(KeyPointHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float KeyPoint_angle_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_angle_set(KeyPointHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float KeyPoint_response_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_response_set(KeyPointHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int KeyPoint_octave_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_octave_set(KeyPointHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int KeyPoint_class_id_get(KeyPointHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KeyPoint_class_id_set(KeyPointHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Mat_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_New_1(int rows, int cols, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_New_2(int rows, int cols, int type, IntPtr data, long step);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_New_3(MatHandle m, Range rowRange, Range colRange);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_New_4(MatHandle m, Rect roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Mat_create_0(MatHandle self, int rows, int cols, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Mat_release_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_clone_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Mat_copyTo_0(MatHandle self, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Mat_convertTo_0(MatHandle self, MatHandle dst, int rtype, double alpha, double beta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Mat_type_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Mat_depth_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Mat_channels_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long Mat_elemSize_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Mat_empty_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long Mat_total_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Mat_isContinuous_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Mat_isSubmatrix_0(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Mat_rows_get(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Mat_cols_get(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Mat_data_get(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long Mat_step_get(MatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MatShape_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool MatShape_empty_0(MatShapeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool MatShape_isScalar_0(MatShapeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MatShape_clear_0(MatShapeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MatShape_erase_0(MatShapeHandle self, IntPtr where);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MatShape_channels_0(MatShapeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool MatShape_hasSymbols_0(MatShapeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MatShape_expand_0(MatShapeHandle self, MatShapeHandle another);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MatShape_toLayout_0(MatShapeHandle self, int newLayout, int C0);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Moments_Delete(IntPtr self);
